feat: Investorの状態管理を改善し、制限状態のチェックを追加